--- a/public/index.html
+++ b/public/index.html
@@ -19,7 +19,7 @@
 <div class="navigation" >
 	<nav>
 		
-<a href="hey">Home</a>
+<a href="Noch nicht vorhanden">Home</a>
 <a href="Noch nicht vorhanden">Urlaubsziele</a>
 <a href="Noch nicht vorhanden">Familienmitglieder</a>
 <a href="Noch nicht vorhanden">Abstimmungsergebnis</a>
