--- a/public/index.html
+++ b/public/index.html
@@ -23,6 +23,10 @@
 <a href="Noch nicht vorhanden">Urlaubsziele</a>
 <a href="Noch nicht vorhanden">Familienmitglieder</a>
 <a href="Noch nicht vorhanden">Abstimmungsergebnis</a>
+<a href="Noch nicht vorhanden">Home</a>
+<a href="Noch nicht vorhanden">Urlaubsziele</a>
+<a href="Noch nicht vorhanden">Familienmitglieder</a>
+<a href="Noch nicht vorhanden">Abstimmungsergebnis</a>
 
 
 	</nav>
