--- a/public/index.html
+++ b/public/index.html
@@ -1,39 +1,39 @@
 <!DOCTYPE html>
-<html lang="de">
+<html>
 
 <head>
-
-	<meta charset="utf-8">
-	<meta name="viewport" content="width=device-width, initial-scale=1.0">
-	<link rel="style" href="css/style.css">
-	<link rel="style" href="https://cdn.datatables.net/1.10.16/css/jquery.dataTables.min.css">
-	
-	<title>MyFamilyPlaner</title>
-
+    <title>HolidayPlaner</title>
+    <link rel="stylesheet" href="./css/styles.css">
 </head>
-<div class = "head">
-	<header>
-		<h1>"Der Familien Urlaubsplaner"</h1>		
-	</header>
-</div>
-<div class="navigation" >
-	<nav>
-		
-<a href="Noch nicht vorhanden">Home</a>
-<a href="Noch nicht vorhanden">Urlaubsziele</a>
-<a href="Noch nicht vorhanden">Familienmitglieder</a>
-<a href="Noch nicht vorhanden">Abstimmungsergebnis</a>
-<a href="Noch nicht vorhanden">Home</a>
-<a href="Noch nicht vorhanden">Urlaubsziele</a>
-<a href="Noch nicht vorhanden">Familienmitglieder</a>
-<a href="Noch nicht vorhanden">Abstimmungsergebnis</a>
-
-
-	</nav>
-</div>
 
 <body>
+    <header class="header">
+        <div class="logo-container">
+            <img src="images/logo.png" alt="Logo" class="logo">
+        </div>
+        <h1 class="title">HolidayPlaner</h1>
+    </header>
 
+    <nav class="navigation">
+        <ul class="nav-links">
+            <li class="nav-item"><a href="index.html">Home</a></li>
+            <li class="nav-item"><a href="urlaubsorte.html">Urlaubsorte</a></li>
+            <li class="nav-item"><a href="#">Familienmitglieder</a></li>
+            <li class="nav-item"><a href="#">Priorisieren</a></li>
+        </ul>
+    </nav>
+
+    <main class="content">
+        <div class="background">
+            <img src="images/hintergrundbild.png" alt="Hintergrundbild" class="background-image">
+        </div>
+    </main>
+
+    <footer class="footer">
+        &copy; 2023 WI HS AALEN COMPANY
+    </footer>
+
+    <script src="scripts/main.js"></script>
 </body>
 
 </html>
