--- a/public/index.html
+++ b/public/index.html
@@ -2,37 +2,41 @@
 <html>
 
 <head>
-    <title>HolidayPlaner</title>
+    <title>HolidayPlanner</title>
     <link rel="stylesheet" href="./css/styles.css">
 </head>
+
 
 <body>
     <header class="header">
         <div class="logo-container">
-            <img src="images/logo.png" alt="Logo" class="logo">
+            <img src="./images/logo.png" alt="Logo" class="logo">
         </div>
-        <h1 class="title">HolidayPlaner</h1>
+        <nav class="navigation">
+            <ul class="nav-links">
+                <li class="nav-item"><a href="index.html">HOME</a></li>
+                <li class="nav-item"><a href="#">FAMILY</a></li>
+                <li class="nav-item"><a href="#">HOLIDAY</a></li>
+                <li class="nav-item"><a href="#">PRIORITIES</a></li>
+            </ul>
+        </nav>
     </header>
-
-    <nav class="navigation">
-        <ul class="nav-links">
-            <li class="nav-item"><a href="index.html">Home</a></li>
-            <li class="nav-item"><a href="urlaubsorte.html">Urlaubsorte</a></li>
-            <li class="nav-item"><a href="#">Familienmitglieder</a></li>
-            <li class="nav-item"><a href="#">Priorisieren</a></li>
-        </ul>
-    </nav>
-
-    <main class="content">
-        <div class="background">
-            <img src="images/hintergrundbild.png" alt="Hintergrundbild" class="background-image">
+    <div class="welcome-image">
+        <div class="image-overlay">
+            <img src="./images/hintergrundbild.png" alt="Welcome Image" class="background">
         </div>
+        <div class="title-container">
+            <h1 class="title">Your Holiday Planner</h1>
+            <button class="btn">PLAN</button>
+        </div>        
+    </div>
+    <div class="white-section"></div>
+    <main class="content">
+        <div class="transition"></div>
     </main>
-
     <footer class="footer">
         &copy; 2023 WI HS AALEN COMPANY
     </footer>
-
     <script src="scripts/main.js"></script>
 </body>
 
