--- a/public/index.html
+++ b/public/index.html
@@ -3,9 +3,9 @@
 
 <head>
     <title>HolidayPlanner</title>
+    <link href="https://fonts.googleapis.com/css?family=Open+Sans" rel="stylesheet">
     <link rel="stylesheet" href="./css/styles.css">
 </head>
-
 
 <body>
     <header class="header">
@@ -14,30 +14,24 @@
         </div>
         <nav class="navigation">
             <ul class="nav-links">
-                <li class="nav-item"><a href="index.html">HOME</a></li>
-                <li class="nav-item"><a href="#">FAMILY</a></li>
-                <li class="nav-item"><a href="#">HOLIDAY</a></li>
-                <li class="nav-item"><a href="#">PRIORITIES</a></li>
+                <li class="nav-item active"><a href="index.html">HOME</a></li>
+                <li class="nav-item"><a href="family.html">FAMILY</a></li>
+                <li class="nav-item"><a href="holiday.html">HOLIDAY</a></li>
+                <li class="nav-item"><a href="priorities.html">PRIORITIES</a></li>
             </ul>
         </nav>
     </header>
     <div class="welcome-image">
-        <div class="image-overlay">
-            <img src="./images/hintergrundbild.png" alt="Welcome Image" class="background">
-        </div>
+        <div class="image-overlay"></div>
+        <img src="./images/hintergrundbild.png" alt="Welcome Image" class="background">
         <div class="title-container">
             <h1 class="title">Your Holiday Planner</h1>
-            <button class="btn">PLAN</button>
-        </div>        
+            <a href="family.html" class="btn"><span>Plan</span></a>
+        </div>
     </div>
-    <div class="white-section"></div>
-    <main class="content">
-        <div class="transition"></div>
-    </main>
     <footer class="footer">
-        &copy; 2023 WI HS AALEN COMPANY
+        WI &copy; 2023 HS AALEN
     </footer>
-    <script src="scripts/main.js"></script>
 </body>
 
 </html>
