--- a/public/holiday.html
+++ b/public/holiday.html
@@ -16,7 +16,7 @@
             <ul class="nav-links">
                 <li class="nav-item"><a href="index.html">HOME</a></li>
                 <li class="nav-item"><a href="family.html">FAMILY</a></li>
-                <li class="nav-item"><a href="holiday.html">HOLIDAY</a></li>
+                <li class="nav-item active"><a href="holiday.html">HOLIDAY</a></li>
                 <li class="nav-item"><a href="priorities.html">PRIORITIES</a></li>
             </ul>
         </nav>
