erweiterung der family.html

--- a/public/family.html
+++ b/public/family.html
@@ -26,8 +26,10 @@
             <div class="card">
                 <h1 class="family-title">Add Family Member</h1>
                 <form id="createFamily" class="family-form">
-                    <label for="nameTag" class="form-label">Name:</label>
+                    <label for="nameTag" class="form-label">Firstname:</label>
                     <input type="text" id="nameTag" required class="form-input">
+                    <label for="nameTag2" class="form-label">Secondname:</label>
+                    <input type="text" id="nameTag2" required class="form-input">
                     <label for="bdayTag" class="form-label">Birthday:</label>
                     <input type="date" id="bdayTag" required class="form-input">
                     <button type="submit" class="add-button">Add</button>
