Js zur erstellung der familienmitglieder

--- a/public/family.html
+++ b/public/family.html
@@ -5,6 +5,8 @@
     <title>HolidayPlanner</title>
     <link rel="stylesheet" href="./css/styles.css">
     <link rel="stylesheet" href="./css/family.css">
+    <script type="text/javascript" src="https://ajax.googleapis.com/ajax/libs/jquery/3.2.1/jquery.min.js"></script>
+    <script type="text/javascript" src="js/familymember.js"></script>
 </head>
 
 <body>
@@ -26,12 +28,12 @@
             <div class="card">
                 <h1 class="family-title">Add Family Member</h1>
                 <form id="createFamily" class="family-form">
-                    <label for="nameTag" class="form-label">Firstname:</label>
-                    <input type="text" id="nameTag" required class="form-input">
-                    <label for="nameTag2" class="form-label">Secondname:</label>
-                    <input type="text" id="nameTag2" required class="form-input">
-                    <label for="bdayTag" class="form-label">Birthday:</label>
-                    <input type="date" id="bdayTag" required class="form-input">
+                    <label for="firstName" class="form-label">Firstname:</label>
+                    <input type="text" id="firstName" required class="form-input">
+                    <label for="secondName" class="form-label">Secondname:</label>
+                    <input type="text" id="secondName" required class="form-input">
+                    <label for="bDay" class="form-label">Birthday:</label>
+                    <input type="date" id="bDay" required class="form-input">
                     <button type="submit" class="add-button">Add</button>
                 </form>
             </div>
