--- a/public/family.html
+++ b/public/family.html
@@ -34,8 +34,34 @@
                     <input type="text" id="secondName" required class="form-input">
                     <label for="bDay" class="form-label">Birthday:</label>
                     <input type="date" id="bDay" required class="form-input">
-                    <button type="submit" class="add-button">Add</button>
+                    <div class="button-container">
+                        <button type="submit" class="add-button">Add</button>
+                        <button type="button" id="selectButton" class="select-button">Select</button>
+                        <button type="button" id="updateButton" class="update-button">Update</button>
+                    </div>
                 </form>
+            </div>
+        </div>
+    </div>
+    <div class="family-members-section">
+        <div class="family-container">
+            <div class="card">
+                <h1 class="family-title">Family Members</h1>
+                <table id="familyMembersList">
+                    <thead>
+                        <tr>
+                            <tr>
+                                <td>Firstname</td>
+                                <td>Lastname</td>
+                                <td>Birthday</td>
+                                <td><button id="1" class="delete-button"><img src="images/delete.png" alt="Delete"></button></td>
+                            </tr>
+                        </tr>
+                    </thead>
+                    <tbody>
+                        <!-- Family members will be inserted here -->
+                    </tbody>
+                </table>
             </div>
         </div>
     </div>
