--- a/public/family.html
+++ b/public/family.html
@@ -6,6 +6,7 @@
     <link rel="stylesheet" href="./css/styles.css">
     <link rel="stylesheet" href="./css/family.css">
     <script type="text/javascript" src="https://ajax.googleapis.com/ajax/libs/jquery/3.2.1/jquery.min.js"></script>
+    <script type="text/javascript" src="https://cdn.datatables.net/1.10.16/js/jquery.dataTables.min.js"></script>
     <script type="text/javascript" src="js/familymember.js"></script>
 </head>
 
@@ -50,12 +51,12 @@
                 <table id="familyMembersList">
                     <thead>
                         <tr>
-                            <tr>
+                            
                                 <td>Firstname</td>
                                 <td>Lastname</td>
                                 <td>Birthday</td>
                                 <td><button id="1" class="delete-button"><img src="images/delete.png" alt="Delete"></button></td>
-                            </tr>
+                            
                         </tr>
                     </thead>
                     <tbody>
