--- a/public/index.html
+++ b/public/index.html
@@ -31,8 +31,10 @@
         </div>
     </div>
 
-    <div class="section"></div>
     <div class="background-image">
+
+        <div class="white-section"></div>
+          
 
     <div class="switch">
         <div class="switch-item">
@@ -156,6 +158,7 @@
 </div>
     <footer class="footer">
         WI &copy; 2023 HS AALEN
+        <a href="kontakt.html" class="ko">Kontakt</a>
     </footer>
 
     <script  src="./js/offers.js"></script>
