--- a/public/index.html
+++ b/public/index.html
@@ -3,7 +3,6 @@
 
 <head>
     <title>HolidayPlanner</title>
-    <link href="https://fonts.googleapis.com/css?family=Open+Sans" rel="stylesheet">
     <link rel="stylesheet" href="./css/styles.css">
     <link rel="stylesheet" href="./css/offers.css">
 </head>
@@ -27,14 +26,12 @@
         <img src="./images/hintergrundbild.png" alt="Welcome Image" class="background">
         <div class="title-container">
             <h1 class="title">Your Holiday Planner</h1>
-            <a href="family.html" class="btn"><span>Plan</span></a>
+            <a href="family.html" class="btn"><span>START</span></a>
         </div>
     </div>
 
-    <div class="background-image">
-
         <div class="white-section"></div>
-          
+        <div class="background-image">
 
     <div class="switch">
         <div class="switch-item">
