--- a/public/index.html
+++ b/public/index.html
@@ -155,7 +155,7 @@
 </div>
     <footer class="footer">
         WI &copy; 2023 HS AALEN
-        <a href="kontakt.html" class="ko">Kontakt</a>
+        <a href="contact.html" class="ko">Contact</a>
     </footer>
 
     <script  src="./js/offers.js"></script>
