--- a/public/priorities.html
+++ b/public/priorities.html
@@ -53,7 +53,7 @@
 
     <footer class="footer">
         WI &copy; 2023 HS AALEN
-        <a href="kontakt.html" class="ko">Kontakt</a>
+        <a href="contact.html" class="ko">Contact</a>
     </footer>
 </body>
 </html>
