--- a/public/holiday.html
+++ b/public/holiday.html
@@ -27,8 +27,8 @@
     <div class="holidays-section">
         <div class="holidays-container">
             <div class="card">
-                <h1 class="holidays-title">Add your Holiday</h1>
-                <form id="createHoliday" class="holidays-form">
+                <h1 class="holidays-title1">Add your Holiday</h1>
+                
               
                     <label for="ort" class="form-label">Location:</label>
                     <input type="text" id="ort" required class="form-input">
@@ -48,6 +48,26 @@
                     <button type="submit" class="add-button">Add</button>
                 </form>
             </div>
+        </div>
+        <div class="holiday-container">
+            <div class="card">
+                <h1 class="holiday-title">Your Holiday</h1>
+                <table id="yourHolidaylist">
+                    <thead>
+                        <tr>
+                            <th>Location</th>
+                            <th>Country</th>
+                            <th>Price</th>
+                            <th>From</th>
+                            <th>To</th>
+                        </tr>
+                    </thead>
+                    <tbody>
+                        <!-- Family members will be inserted here -->
+                    </tbody>
+                </table>
+            </div>
+            <a href="priorities.html" class="btn2"><span>NEXT</span></a>
         </div>
     </div>
     <footer class="footer">
