--- a/public/holiday.html
+++ b/public/holiday.html
@@ -9,6 +9,8 @@
     <script type="text/javascript" src="https://ajax.googleapis.com/ajax/libs/jquery/3.2.1/jquery.min.js"></script>
     <script type="text/javascript" src="https://cdn.datatables.net/1.10.16/js/jquery.dataTables.min.js"></script>
     <script type="text/javascript" src="js/holiday.js"></script>
+    
+
 </head>
 
 <body>
@@ -55,8 +57,8 @@
                     <input type="text" id="urlaubID_wish" required class="form-input">
                     <label for="id" class="form-label">ID:</label>
                     <input type="text" id="id" required class="form-input">
-                    <label for="ort_wish" class="form-label">Ort:</label>
-                    <input type="text" id="ort_wish" required class="form-input">
+                    <label for="description" class="form-label">Description:</label>
+                    <input type="text" id="description" required class="form-input">
                     <div class="button-container">
                         <button type="submit" class="add-button">Add</button>
                         <button type="button" id="updateWishButton" class="update-button">Update</button>
@@ -91,7 +93,7 @@
                         <tr>
                             <th>Holiday ID</th>
                             <th>ID</th>
-                            <th>Ort</th>
+                            <th>Description</th>
                             <th>Actions</th>
                         </tr>
                     </thead>
